--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,14 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
-
 # Fabric Properties
-	# check these on https://fabricmc.net/use
-	minecraft_version=1.14.2
-	yarn_mappings=1.14.2+build.7
-	loader_version=0.4.8+build.154
-
+# check these on https://modmuss50.me/fabric.html
+minecraft_version=1.16.3
+yarn_mappings=1.16.3+build.5
+loader_version=0.9.3+build.207
 # Mod Properties
-	mod_version = 0.2
-	maven_group = net.fabricmc
-	archives_base_name = RaidIm
-
+mod_version=0.1-SNAPSHOT
+maven_group=raidim
+archives_base_name=raidim
 # Dependencies
-	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric
-	fabric_version=0.3.0+build.176
+# check this on https://modmuss50.me/fabric.html
+fabric_version=0.20.2+build.402-1.16
